# Cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md
.github/: outdoor-box.txt  outdoor-mod.txt  outdoor-mod2.txt  outdoor-mod3.txt  outdoor-mod4.txt  outdoor-plane.txt  outdoor-plane2.txt  outdoor-refl.txt  outdoor-tri.txt  spheres-samples1.txt  spheres-samples100.txt  spheres1-bg.txt  spheres1-res.txt  spheres1-vp.txt  spheres2-b.txt  spheres2-c.txt
examples/SphereExamples/: spheres1.txt
examples/TriangleExamples/: triangle.txt
src/: FileReader.cpp  FileReader.h  InputData.h  Scene.cpp  Scene.h  collision.h  commands.h  main.cpp
src/PGA/: PGA_3D.h  image_lib.h  multivector.h  parse_pga.h  rayTrace_pga.cpp  stb_image.h  stb_image_write.h
src/primitives/: PrimitiveProcessor.cpp  PrimitiveProcessor.h  Triangle.cpp  Triangle.h
test/: CMakeLists.txt  file_reader_test.cpp
test_files/: file1.txt
